--- a/style.css
+++ b/style.css
@@ -38,3 +38,16 @@ section {
 .red {
     color: red;
 }
+
+button {
+    background-color: green;
+    color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 1.3em;
+    padding: 1em;
+    margin-top: 2em;
+}
+
+button:hover {
+    background-color: chartreuse;
+}
