Dealer deals to 17

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body {
+    width: 80%;
+    margin: 0 auto;
+}
+
 .card {
     box-shadow: 3px 3px 10px gray;
     border: thin solid black;
@@ -17,18 +22,38 @@
     transform: none;
 }
 
+.card:nth-child(3) {
+    left: -3.5em;
+    transform: rotate(3deg);
+}
+
+.card:nth-child(4) {
+    left: -4.5em;
+    transform: rotate(8deg);
+}
+
+.card:nth-child(5) {
+    left: -5.5em;
+    transform: rotate(2deg);
+}
+
+.card:nth-child(6) {
+    left: -6.5em;
+    transform: rotate(-2deg);
+}
+
 section {
     margin: 10px;
     padding: 1em;
     border-radius: 10%;
     border: thin solid black;
-    height: 100px;
-    width: 60px;
+    height: 80px;
+    width: 50px;
     background-color: white;
 }
 
 .card span {
-    font-size: 2em;
+    font-size: 1.6em;
 }
 
 .black {
@@ -44,10 +69,23 @@ button {
     color: white;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 1.3em;
-    padding: 1em;
-    margin-top: 2em;
+    padding: 0.5em;
+    margin-top: 1em;
+}
+
+#stop {
+    background-color: brown;
 }
 
 button:hover {
     background-color: chartreuse;
+}
+
+#dealerArea {
+    background-color: wheat;
+    border: thin solid red;
+    border-radius: 3%;
+    padding: 2em;
+    margin: 1em;
+    min-height: 25vh;
 }
