Added points, new deal and some more

--- a/style.css
+++ b/style.css
@@ -77,6 +77,11 @@ button {
     background-color: brown;
 }
 
+#hit {
+    background-color: yellow;
+    color: #222;
+}
+
 button:hover {
     background-color: chartreuse;
 }
